# ZeroFS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pjdfstest.yml  rust.yml  zfs-test.yml
src/: cache.rs  encryption.rs  filesystem.rs  inode.rs  key_management.rs  lock_manager.rs  main.rs  nbd.rs  operations.rs  permissions.rs  posix_tests.rs  test_helpers.rs
src/operations/: common.rs  dir_ops.rs  file_ops.rs  link_ops.rs  metadata_ops.rs  remove_ops.rs  rename_ops.rs
