[package]
name = "zerofs"
version = "0.1.0"
edition = "2024"

[dependencies]
nfsserve = "0.10"
tokio = { version = "1.46", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slatedb = { git = "https://github.com/slatedb/slatedb.git", rev = "2fe991affaed8e2cb9caf3eed73589367484f09a", features = [
    "lz4",
] }
object_store = { version = "0.12", features = ["aws"] }
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
libc = "0.2"
futures = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"] }
